# gevidaq

./: .gitignore  EvolutionScanningThread.py  Evolution_GUI_v6.py  Evolution_GUI_v7.py  Fiumicino.py  FocusCalibrater.py  LICENSE.txt  MaskRCNN_TF2_environment.yml  MaskRCNN_TF2_environment_1.yml  README.md  StylishQT.py  Thumbs.db  Tupolev_v2.py  __init__.py  __main__.py  environment.yml  format.sh  pyproject.toml
CentreCoordinates/: Install.txt  Setup.py  SetupEnv.yml  condaenv.wg_fwklc.requirements.txt
CoordinatesManager/: CoordinateTransformations.py  CoordinateWidget.py  CoordinateWidget2.py  DMDActuator.py  DMDWidget.py  DMDminiWidget.py  GalvoWidget.py  ManualRegistration.py  Registrator.py  StageRegistrationWidget.py  Thumbs.db  __init__.py
GalvoWidget/: GalvoScan_backend.py  PMTWidget.py  __init__.py  pmt_thread.py
GeneralUsage/: ThreadingFunc.py  Weather_GUI.py
HamamatsuCam/: HamamatsuActuator.py  HamamatsuDCAM.py  HamamatsuUI.py  Thumbs.db  __init__.py  cam supported properties.txt  dcamapiDLLtrial.py  hamamatsu_camera.py
Icons/: Thumbs.db  gui_style.qss
ImageAnalysis/: AnalysisWidget.py  CellDetectorGUI.py  CellSelectionGUI_ML.py  CellSelectionWidget.py  CurveFit.py  EvolutionAnalysisWidget.py  FrequencyAnalysis.py  ImageProcessing.py  ImageProcessing_MaskRCNN.py  InferenceXin.py  Plotanalysis.py  ThreadingDecrotor.py  __init__.py  matlabAnalysis.py
InsightX3/: TwoPhotonLaser.py  TwoPhotonLaserUI.py  TwoPhotonLaser_backend.py  __init__.py
Linearstage/: focuser.py
NIDAQ/: AOTFWidget.py  DAQoperator.py  ServoMotor.py  WaveformWidget.py  (+5 more)
(+178 files in other folders)
